rear camera instead of front

--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
 		};
 
 		// Attach the video stream to the video element and autoplay.
-		navigator.mediaDevices.getUserMedia(constraints)
+		navigator.mediaDevices.getUserMedia({
+				audio: false,
+				video : {
+					facingMode: 'environment'
+				}
+			})
 			.then((stream) => {
 				player.srcObject = stream;
 			});
