updated to latest tesseract + corrected code

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 		</div>
 	</div>
 
-	<!-- <script src='Tesseract/tesseract.min.js'></script> -->
-	<script src='https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js'></script>
+	<script src='Tesseract/tesseract.min.js'></script>
+	<!-- <script src='https://unpkg.com/tesseract.js@3.0.1/dist/tesseract.min.js'></script> -->
+	
 	<script src="detection.js"></script>
 	<script>
 		const video = document.getElementById('video');
